# fuguru

backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
frontend/: .firebaserc  .gitignore  README.md  firebase.json.example  flutter_launcher_icons.yaml  pubspec.yaml
frontend/android/app/: build.gradle  google-services.json.example
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: account_page.dart  create_account.dart  doc_detail_page.dart  firebase_options.dart.example  home_page.dart  knowledge_detail_page.dart  knowledge_page.dart  login_page.dart  main.dart  navigation.dart  on_board_page.dart  summary_detail_page.dart  summary_page.dart
frontend/lib/models/: doc.dart  knowledge.dart  user.dart
frontend/macos/Runner/: GoogleService-Info.plist
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/web/: index.html
