[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["itzmeowww <winthanasan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
vertexai = "^1.71.1"
firebase-admin = "^6.6.0"
google-generativeai = "^0.8.3"
cloudevents = "^1.11.0"
google-events = "^0.14.0"
google-cloud-logging = "^3.11.3"
mistune = "^3.1.0"
pymupdf4llm = "^0.0.17"
bs4 = "^0.0.2"
markitdown = "^0.0.1a3"
tenacity = "^9.0.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
